src/test/ui/asm/asm-misplaced-option.stderr
warning: unrecognized option
  --> $DIR/asm-misplaced-option.rs:36:64
   |
LL |         asm!("mov $1, $0" : "=r"(x) : "r"(5_usize), "0"(x) : : "cc");
   |                                                                ^^^^

warning: expected a clobber, found an option
  --> $DIR/asm-misplaced-option.rs:43:80
   |
LL |         asm!("add $2, $1; mov $1, $0" : "=r"(x) : "r"(x), "r"(8_usize) : "cc", "volatile");
   |                                                                                ^^^^^^^^^^

error: compilation successful
  --> $DIR/asm-misplaced-option.rs:31:1
   |
LL | / pub fn main() { //~ ERROR compilation successful
LL | |     // assignment not dead
LL | |     let mut x: isize = 0;
LL | |     unsafe {
...  |
LL | |     assert_eq!(x, 13);
LL | | }
   | |_^

error: aborting due to previous error

